# inference_opt

./: .env.example  .gitignore  CLAUDE.md  MPS_REFERENCE.md  Makefile  main.py  pyproject.toml
.claude/: settings.local.json
adapters/: __init__.py  base.py  llama_cpp.py
data/: prompts.jsonl
services/baseline_single/: __init__.py  main.py  models.py  pyproject.toml
tools/: make_prompts.py
